Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19549

el10 build fix

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      ("LU-18562 osd: llog write batch block allocation") landed some changes that break 6.12 (el10) kernel builds:

        CC [M]  /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.o
      /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.c:2436:6: error: no previous prototype for ‘osd_drop_preallocated_space’ [-Werror=missing-prototypes]
       2436 | void osd_drop_preallocated_space(struct osd_object *o)
            |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
      cc1: all warnings being treated as errors
      make[7]: *** [scripts/Makefile.build:229: /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.o] Error 1
        CC [M]  /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.o
      /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.c:1961:21: error: no previous prototype for ‘osd_getnblk’ [-Werror=missing-prototypes]
       1961 | struct buffer_head *osd_getnblk(handle_t *handle, struct osd_object *o,
            |                     ^~~~~~~~~~~
      /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.c:2101:5: error: no previous prototype for ‘osd_ldiskfs_write_fast’ [-Werror=missing-prototypes]
       2101 | int osd_ldiskfs_write_fast(struct osd_object *o,  void *buf,
            |     ^~~~~~~~~~~~~~~~~~~~~~
      cc1: all warnings being treated as errors
      

            stancheff Shaun Tancheff
            stancheff Shaun Tancheff
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: