LU-19549 osd-ldiskfs: missing prototypes build fix

osd_drop_preallocated_space(), osd_getnblk(), and
osd_ldiskfs_write_fast() can be made static and resolve the
build failures due to [-Werror=missing-prototypes]

Fixes: 1f3e4df2fbc ("LU-18562 osd: llog write batch block allocation")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I9be01abb960f046a8dfab2c8537cf05638472b44
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/62136
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@dilger.ca>